[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nuitducode"
version = "0.1.0"
description = "Un jeu de tir spatial"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]
